facendo sezione deploy-scale del main

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,12 @@ body {
     min-width: 320px;
 }
 
+.small-container {
+    width: 65%;
+    max-width: 900px;
+    margin: auto;
+}
+
 .brand-logo img {
     /* width: 25%; */
     height: 25px;
@@ -42,6 +48,7 @@ nav .btn {
 .jumbotron {
     background-image: url('../img/ms-jumbo.jpg');
     color: white;
+    margin-bottom: 0;
 }
 
 .jumbotron h1 {
@@ -77,4 +84,46 @@ nav .btn {
     width: 4%;
     position: absolute;
     left: 10px;
+}
+
+/*MAIN*/
+/*partners*/
+
+.partners {
+    background-color: #f3f5f9; 
+    padding: 20px 0;   
+    text-align: center;
+    color: #74809b;
+}
+
+/*deploy-scale*/
+.deploy-scale {
+    padding: 30px 0;
+    color:#6d7a95;
+}
+
+.ds-text {
+    padding-bottom: 40px;
+}
+
+.ds-text h2 {
+    color: #041d4f;
+}
+
+.ds-text p {
+    font-size: 18px;
+    
+}
+
+.deploy-scale ul {
+    border-left: 1px solid #6d7a95 ;
+}
+
+.deploy-scale ul li {
+    padding-left: 5px;
+    padding-bottom: 10px;
+}
+
+.deploy-scale h4 {
+    color: #041d4f;
 }
