--- a/css/style.css
+++ b/css/style.css
@@ -213,5 +213,36 @@ nav .btn {
     display: inline-block;
 }
 
+/*features*/
+
+.features {
+    padding: 30px 0;
+
+}
+
+.features h2 {
+    color: #041d4f;
+    padding-bottom: 30px; 
+}
+
+/* nation-customers */
+
+.nation-customers {
+    background: rgb(0,30,153);
+    background: linear-gradient(0deg, rgba(0,30,153,1) 0%, rgba(0,72,198,1) 100%);
+    color: white;
+    padding-top: 50px;
+    padding-bottom: 40px;
+}
+
+.nation-customers h2 {
+    padding-bottom: 10px;
+}
+
+.nation-customers  a {
+    color:  #2580ff;
+}
+
+
 
 
